# grpc-java

./: COMPILING.md  README.md  build.gradle  repositories.bzl
alts/src/main/java/io/grpc/alts/internal/: AltsChannelCrypter.java  AltsTsiFrameProtector.java
buildscripts/: make_dependencies.bat  make_dependencies.sh
compiler/: README.md
core/src/main/java/io/grpc/internal/: CompositeReadableBuffer.java  ForwardingReadableBuffer.java  ReadableBuffers.java
core/src/test/java/io/grpc/internal/: ReadableBufferTestBase.java
examples/: build.gradle  pom.xml
examples/android/clientcache/app/: build.gradle
examples/android/helloworld/app/: build.gradle
examples/android/routeguide/app/: build.gradle
examples/android/strictmode/app/: build.gradle
examples/example-alts/: build.gradle
examples/example-gauth/: build.gradle  pom.xml
examples/example-hostname/: build.gradle  pom.xml
examples/example-jwt-auth/: build.gradle  pom.xml
examples/example-tls/: build.gradle  pom.xml
examples/example-xds/: build.gradle
netty/src/main/java/io/grpc/netty/: GrpcSslContexts.java
protobuf-lite/src/main/java/io/grpc/protobuf/lite/: ProtoLiteUtils.java
xds/example-xds/: BUILD.bazel  build.gradle
xds/example-xds/src/main/java/io/grpc/examples/xds/: GreeterGrpc.java  HelloWorldXdsClient.java  HelloWorldXdsServer.java
