load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["src/main/proto/helloworld/helloworld.proto"],
)

java_proto_library(
    name = "helloworld_java_proto",
    deps = [":helloworld_proto"],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    srcs = [":helloworld_proto"],
    deps = [":helloworld_java_proto"],
)

java_library(
    name = "example-xds",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    deps = [
        ":helloworld_java_grpc",
        ":helloworld_java_proto",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@io_grpc_grpc_java//xds",
    ],
)

java_binary(
    name = "hello-world-xds-client",
    testonly = 1,
    main_class = "io.grpc.examples.xds.HelloWorldXdsClient",
    runtime_deps = [
        ":example-xds",
        "@io_grpc_grpc_java//netty",
    ],
)

java_binary(
    name = "hello-world-xds-server",
    testonly = 1,
    main_class = "io.grpc.examples.xds.HelloWorldXdsServer",
    runtime_deps = [
        ":example-xds",
        "@io_grpc_grpc_java//netty",
    ],
)
